dark mode fixes

--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,22 @@
   --button-primary: #0078e7;
   --button-secondary: #e6e6e6;
   --button-critical: rgb(202, 60, 60);
+  --text-header: grey;
 }
 
 @media (prefers-color-scheme: dark) {
   :root  {
     --primary-color: rgb(39, 39, 39);
     --primary-color-accent: #1c1c1c;
-    --secondary-color: #171717;
+    --secondary-color: #5a5a5a;
     --secondary-color-accent: #444;
-    --text-primary: #fff;
+    --text-primary: #dcdcdc;
     --text-secondary: rgb(169, 169, 169);
     --highlight-primary: #0078e7;
     --highlight-secondary: #448fbe;
+    --button-primary: #2568ae;
+    --button-secondary: #626262;
+    --text-header: #efefef;
   }
 }
 
@@ -113,12 +117,12 @@ h3 {
 }
 
 a {
-  color: #0071b8;;
+  color: #0071b8;
 }
 
 @media (prefers-color-scheme: dark) {
   a {
-    color: #008ce3;
+    color: #0093ed;
   }
 }
 a:visited {
@@ -127,7 +131,7 @@ a:visited {
 
 @media (prefers-color-scheme: dark) {
   a:visited {
-    color: #0068be;
+    color: #0063ff;
   }
 }
 label + div.Select,
@@ -150,10 +154,10 @@ pre {
   margin: 20px 0 20px;
   font-size: 13px;
   line-height: 1.42857143;
-  color: var(--secondary-color);
+  color: var(--text-primary);
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f5f5f5;
+  background-color: var(--primary-color-accent);
   border: 1px solid #ccc;
 }
 
@@ -227,19 +231,6 @@ pre {
 kbd, pre, samp {
   font-family: monospace, monospace;
   font-size: 1em;
-}
-
-pre {
-  display: block;
-  padding: 9.5px 9.5px 9.5px 19px;
-  margin: 20px 0 20px;
-  font-size: 13px;
-  line-height: 1.42857143;
-  color: var(--secondary-color);
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
 }
 
 .noscript {
