--- a/src/Components/FilterBar.css
+++ b/src/Components/FilterBar.css
@@ -9,14 +9,6 @@
     }
     display: inline-block;
   }
-
-  div {
-    border-color: var(--primary-color-accent);
-    color: var(--text-primary);
-    &:hover {
-      border-color: var(--primary-color-accent);
-    }
-  }
   
   div.type {
     width: 150px;
