--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -26,7 +26,7 @@ header {
   }
 
   a, a:visited {
-    color: var(--text-secondary);
+    color: var(--text-header);
     cursor: pointer;
     padding: .5em 1em;
     text-decoration: none;
